Update support contact references in index.html

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                         <div class="feature-icon">✓</div>
                         <div class="feature-content">
                             <div class="feature-title">Direct Local Support</div>
-                            <div class="feature-desc">You aren't dealing with a big corporation. You get direct access to Andrew Barret for maintenance and support to keep you on the road.</div>
+                            <div class="feature-desc">You aren't dealing with a big corporation. You get direct access to Cruise The Creek for maintenance and support to keep you on the road.</div>
                         </div>
                     </div>
                 </div>
@@ -499,7 +499,7 @@
                 
                 <div class="cta-section">
                     <a href="#" class="cta-button">Get Started Today</a>
-                    <p class="support-note">Questions? Contact Andrew Barret directly for immediate support</p>
+                    <p class="support-note">Questions? Contact Cruise The Creek directly for immediate support</p>
                 </div>
             </div>
         </div>
