Update CTA button text in index.html

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 </div>
                 
                 <div class="cta-section">
-                    <a href="#" class="cta-button">Get Started Today</a>
+                    <a href="#" class="cta-button">Choose A Plan Below</a>
                     <p class="support-note">Questions? Contact Cruise The Creek directly for immediate support</p>
                 </div>
             </div>
