Update payment details and ownership terms

--- a/index.html
+++ b/index.html
@@ -388,12 +388,12 @@
                 <div class="price-item">
                     <div class="price-label">Weekly Payment</div>
                     <div class="price-amount">$25<span class="price-period">-$30</span></div>
-                    <div class="price-detail">For 30 weeks</div>
+                    <div class="price-detail">Per Week</div>
                 </div>
                 <div class="price-item">
                     <div class="price-label">Total Program</div>
                     <div class="price-amount">$750<span class="price-period">-$900</span></div>
-                    <div class="price-detail">Own it after 30 payments</div>
+                    <div class="price-detail">Own it after 15 payments</div>
                 </div>
                 <div class="price-item">
                     <div class="price-label">Monthly Cost</div>
@@ -410,7 +410,7 @@
                         <div class="feature-icon">✓</div>
                         <div class="feature-content">
                             <div class="feature-title">Path to Full Ownership</div>
-                            <div class="feature-desc">This isn't a forever-rental. After 30 weekly payments, the bike is yours to keep, giving you permanent transportation independence.</div>
+                            <div class="feature-desc">This isn't a forever-rental. After 15 bi-weekly payments, the bike is yours to keep, giving you permanent transportation independence.</div>
                         </div>
                     </div>
                     
